# gafferDependencies

./: README.md  gafferDependencies.sublime-workspace
cortex-9.21.1/: CMakeLists.txt  hoqq
cortex-9.21.1/cmake/: CortexAlembic.cmake  CortexAppleseed.cmake  CortexMaya.cmake  CortexRMan.cmake
cortex-9.21.1/contrib/IECoreAlembic/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreAlembic/src/IECoreAlembic/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreAlembic/src/IECoreAlembic/bindings/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreAppleseed/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreAppleseed/include/IECoreAppleseed/: CameraAlgo.h  LogTarget.h  ProgressTileCallback.h  Renderer.h  RendererController.h
cortex-9.21.1/contrib/IECoreAppleseed/src/IECoreAppleseed/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreAppleseed/src/IECoreAppleseed/bindings/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreAppleseed/src/IECoreAppleseed/outputDriver/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreArnold/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreArnold/include/IECoreArnold/: CameraAlgo.h  CurvesAlgo.h  MeshAlgo.h  NodeAlgo.h  PointsAlgo.h  ShapeAlgo.h  SphereAlgo.h  ToArnoldCameraConverter.h  ToArnoldConverter.h  ToArnoldCurvesConverter.h  ToArnoldMeshConverter.h  ToArnoldPointsConverter.h  ToArnoldShapeConverter.h
cortex-9.21.1/contrib/IECoreArnold/src/IECoreArnold/: CMakeLists.txt  UniverseBlock.cpp
cortex-9.21.1/contrib/IECoreArnold/src/IECoreArnold/bindings/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreArnold/src/IECoreArnold/outputDriver/: CMakeLists.txt
cortex-9.21.1/contrib/IECoreArnold/src/IECoreArnold/procedural/: CMakeLists.txt
cortex-9.21.1/gafferBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Cortex.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
cortex-9.21.1/gafferBuild/contrib/IECoreAlembic/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cortex-9.21.1/gafferBuild/contrib/IECoreAlembic/src/IECoreAlembic/: IECoreAlembic.vcxproj  IECoreAlembic.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cortex-9.21.1/gafferBuild/contrib/IECoreAlembic/src/IECoreAlembic/Release/: IECoreAlembic.exp  IECoreAlembic.lib
cortex-9.21.1/gafferBuild/contrib/IECoreAlembic/src/IECoreAlembic/bindings/: INSTALL.vcxproj  INSTALL.vcxproj.filters  _IECoreAlembic.vcxproj  _IECoreAlembic.vcxproj.filters  (+1 more)
cortex-9.21.1/gafferBuild/src/IECore/: IECore.vcxproj  IECore.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cortex-9.21.1/gafferBuild/src/IECore/Release/: IECore.exp
cortex-9.21.1/gafferBuild/src/IECoreGL/: IECoreGL.vcxproj  IECoreGL.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cortex-9.21.1/gafferBuild/src/IECoreGL/Release/: IECoreGL.exp  IECoreGL.lib
cortex-9.21.1/gafferBuild/src/IECoreGL/bindings/: INSTALL.vcxproj  INSTALL.vcxproj.filters  _IECoreGL.vcxproj  _IECoreGL.vcxproj.filters  cmake_install.cmake
cortex-9.21.1/gafferBuild/src/IECoreGL/bindings/Release/: _IECoreGL.exp  _IECoreGL.lib  _IECoreGL.pyd
cortex-9.21.1/gafferBuild/src/IECorePython/: IECorePython.vcxproj  IECorePython.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cortex-9.21.1/gafferBuild/src/IECorePython/Release/: IECorePython.exp  IECorePython.lib
cortex-9.21.1/gafferBuild/src/IECorePythonModule/: INSTALL.vcxproj  INSTALL.vcxproj.filters  _IECore.vcxproj  _IECore.vcxproj.filters  cmake_install.cmake
cortex-9.21.1/gafferBuild/src/IECorePythonModule/Release/: _IECore.exp  _IECore.lib  _IECore.pyd
cortex-9.21.1/gafferBuild/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cortex-9.21.1/gafferBuild/x64/Release/INSTALL/INSTALL.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cortex-9.21.1/gafferBuild/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cortex-9.21.1/include/IECore/: CurvesAlgo.h  GeometricTypedData.h  MeshAlgo.h  PointsAlgo.h  RunTimeTyped.h  TypedData.h
cortex-9.21.1/include/IECoreGL/: TextureLoader.h
cortex-9.21.1/include/IECorePython/: IECoreBinding.h  VectorTypedDataBinding.inl
cortex-9.21.1/include/IECoreRI/: Export.h
cortex-9.21.1/python/IECore/: ClassLoader.py  ClassLsOp.py  __init__.py
cortex-9.21.1/python/IECoreMaya/: PresetsUI.py
cortex-9.21.1/src/IECore/: CMakeLists.txt  CachedReader.cpp  CapturingRenderer.cpp  DeepImageReader.cpp  DeepPixel.cpp  DisplayDriverServer.cpp  EXRDeepImageReader.cpp  IFFFile.cpp  MPlayDisplayDriver.cpp  PNGImageReader.cpp  StreamIndexedIO.cpp
cortex-9.21.1/src/IECoreGL/: CMakeLists.txt  FontLoader.cpp  Renderer.cpp  ShaderLoader.cpp  TextureLoader.cpp
cortex-9.21.1/src/IECoreGL/bindings/: CMakeLists.txt
cortex-9.21.1/src/IECoreHoudini/: CMakeLists.txt
cortex-9.21.1/src/IECoreHoudini/bindings/: CMakeLists.txt
cortex-9.21.1/src/IECoreHoudini/plugin/: CMakeLists.txt
cortex-9.21.1/src/IECoreMaya/: CMakeLists.txt
cortex-9.21.1/src/IECoreMaya/bindings/: CMakeLists.txt
cortex-9.21.1/src/IECorePython/: CMakeLists.txt  DeepPixelBinding.cpp  ImathMatrixBinding.cpp  VectorTypedDataBinding.cpp
cortex-9.21.1/src/IECorePythonModule/: CMakeLists.txt
cortex-9.21.1/src/IECoreRI/: CMakeLists.txt  RendererImplementation.cpp
cortex-9.21.1/src/IECoreRI/bindings/: CMakeLists.txt
cortex-9.21.1/src/rmanDisplays/ieDisplay/: CMakeLists.txt
cortex-9.21.1/src/rmanProcedurals/python/: CMakeLists.txt
cortex-9.21.1/test/IECore/: BasicPreset.py  CachedReader.py  ClassLoader.py  ConfigLoaderTest.py  FormattedParameterHelp.py  ParameterParser.py  SearchPath.py  ThreadingTest.py
cortex-9.21.1/test/IECore/data/idxFiles/: test.idx
cortex-9.21.1/test/IECoreGL/: FontLoaderTest.py  ShaderLoaderTest.py  TextureLoaderTest.py
cortex-9.21.1/test/IECoreGL/shaders/3dLabs/: Mandel.frag  Mandel.vert
(+146 files in other folders)
