INCLUDE_DIRECTORIES( ${CORTEX_ALEMBIC_INCLUDE_DIRECTORY} )
INCLUDE_DIRECTORIES( ${ILMBASE_INCLUDE_DIR}/OpenEXR )
INCLUDE_DIRECTORIES( ${OPENEXR_INCLUDE_DIR}/OpenEXR )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/include )
ADD_SUBDIRECTORY( src/IECoreAlembic )
IF( WITH_TESTS )
  MESSAGE( STATUS "CMake build scripts for IECoreAlembic tests are currently not implemented!" )
  #ADD_SUBDIRECTORY( test/IECoreAlembic )
ENDIF()
