ADD_DEFINITIONS( -DAPPLESEED_WITH_OSL -DAPPLESEED_ENABLE_IMATH_INTEROP )
INCLUDE_DIRECTORIES( ${CORTEX_APPLESEED_INCLUDE_DIRECTORY} )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/include )
ADD_SUBDIRECTORY( src/IECoreAppleseed )
IF( WITH_TESTS )
  MESSAGE( STATUS "CMake build scripts for IECoreAppleseed tests are currently not implemented!" )
  #ADD_SUBDIRECTORY( test/IECoreAppleseed )
ENDIF()
