INCLUDE_DIRECTORIES( ${CORTEX_HOUDINI_INCLUDE_DIR} )

ADD_SUBDIRECTORY( bindings )
ADD_SUBDIRECTORY( plugin )

FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../include/IECoreHoudini/*.h" "../../include/IECoreHoudini/*.inl" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     ${CORTEX_HOUDINI_LIBS}
     ${Boost_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${ZLIB_LIBRARIES} )

IF( BUILD_STATIC_LIBS )
  ADD_LIBRARY( IECoreHoudini STATIC ${SOURCE_FILES} )
ELSE()
  ADD_LIBRARY( IECoreHoudini SHARED ${SOURCE_FILES} )
ENDIF()

TARGET_LINK_LIBRARIES( IECoreHoudini ${THIS_LIBS} )

INSTALL( TARGETS IECoreHoudini
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib/static )

INSTALL( FILES ${H_FILES}
         DESTINATION include/IECoreHoudini
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )
