INCLUDE_DIRECTORIES( ${MAYA_INCLUDE_PATH} )

FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../include/IECoreMaya/*.h" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

FILE( GLOB MEL_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../mel/IECoreMaya/*.mel" )

FILE( GLOB ICON_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../icons/IECoreMaya/*.xpm" "../../icons/IECoreMaya/*.png" )

SET( THIS_LIBS
     IECore
     IECorePython
     ${CORTEX_GL_LIBS}
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

IF( WITH_RMAN AND CORTEX_RMAN_FOUND AND CORTEX_DELIGHT )
  INCLUDE_DIRECTORIES( CORTEX_RMAN_INCLUDE_PATH )
  SET( THIS_LIBS ${THIS_LIBS} ${CORTEX_RMAN_LIBRMAN} )
  ADD_DEFINITIONS( -DIECOREMAYA_WITH_RI )
  ADD_DEFINITIONS( -IECORERI_RMANPROCEDURAL_NAME=ieProcedural )
ELSE()
  LIST( REMOVE_ITEM CXX_FILES
        DelightProceduralCacheCommand.cpp )
ENDIF()

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

IF( BUILD_STATIC_LIBS )
  ADD_LIBRARY( IECoreMaya STATIC ${SOURCE_FILES} )
ELSE()
  ADD_LIBRARY( IECoreMaya SHARED ${SOURCE_FILES} )
ENDIF()

TARGET_LINK_LIBRARIES( IECoreMaya ${THIS_LIBS} )

INSTALL( TARGETS IECoreMaya
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib/static )

INSTALL( FILES ${H_FILES}
         DESTINATION include/IECoreMaya
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )

INSTALL( FILES ${MEL_FILES}
         DESTINATION mel/IECoreMaya
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )

INSTALL( FILES ${ICON_FILES}
         DESTINATION icons/IECoreMaya
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )

# Adding subdirectory at the bottom so we inherit all those checks when building the python bindings,
# so we need to unset a few things also.
UNSET( CXX_FILES )
UNSET( H_FILES )
UNSET( SOURCE_FILES )
UNSET( THIS_LIBS )
ADD_SUBDIRECTORY( bindings )
