FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../include/IECoreModule/*.h" "../../include/IECoreModule/*.inl" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

FILE( GLOB PY_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../python/IECore/*.py" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     IECorePython
     ${Boost_LIBRARIES}
     ${Ilmbase_HALF_LIBRARY}
     ${Ilmbase_IEX_LIBRARY}
     ${Ilmbase_IEXMATH_LIBRARY}
     ${Ilmbase_ILMTHREAD_LIBRARY}
     ${Ilmbase_IMATH_LIBRARY}
     ${Openexr_ILMIMF_LIBRARY}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

ADD_LIBRARY( _IECore MODULE ${SOURCE_FILES} )

IF ( WINDOWS )
  SET_TARGET_PROPERTIES( _IECore PROPERTIES SUFFIX ".pyd" )
ELSE ()
  SET_TARGET_PROPERTIES( _IECore PROPERTIES PREFIX "" )
ENDIF ()

TARGET_LINK_LIBRARIES( _IECore ${THIS_LIBS} )

INSTALL( TARGETS _IECore
         LIBRARY DESTINATION python/IECore )

INSTALL( FILES ${PY_FILES}
         DESTINATION python/IECore )

IF( WITH_TESTS )
  SET( TEST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../test/IECore/ )
  INSTALL( DIRECTORY ${TEST_DIRECTORY}
           DESTINATION test/IECore )
ENDIF()
