FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../../include/IECore/bindings/*.h" "../../../include/IECore/bindings/*.inl" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

FILE( GLOB PY_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../../python/IECoreGL/*.py" )

IF(NOT FREETYPE_FOUND )
    LIST( REMOVE_ITEM CXX_FILES
        FontBinding.cpp
        FontLoaderBinding.cpp )
ENDIF()

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     IECorePython
     IECoreGL
     ${CORTEX_GL_LIBS}
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

ADD_LIBRARY( _IECoreGL MODULE ${SOURCE_FILES} )

IF ( WINDOWS )
  SET_TARGET_PROPERTIES( _IECoreGL PROPERTIES SUFFIX ".pyd" )
ELSE ()
  SET_TARGET_PROPERTIES( _IECoreGL PROPERTIES PREFIX "" )
ENDIF ()

TARGET_LINK_LIBRARIES( _IECoreGL ${THIS_LIBS} )

INSTALL( TARGETS _IECoreGL
         LIBRARY DESTINATION python/IECoreGL )

INSTALL( FILES ${PY_FILES}
         DESTINATION python/IECoreGL )
