FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../../include/IECoreHoudini/bindings/ "*.h" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

FILE( GLOB PY_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../../python/IECoreHoudini/ "*.py" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     IECorePython
     IECoreHoudini
     ${CORTEX_HOUDINI_LIBS}
     ${Boost_LIBRARIES}
     ${CORTEX_ILMBASE_LIBS}
     ${CORTEX_OPENEXR_LIBS}
     ${CORTEX_TBB_LIBS}
     ${ZLIB_LIBRARIES} )

ADD_LIBRARY( _IECoreHoudini MODULE ${SOURCE_FILES} )

IF ( WINDOWS )
    SET_TARGET_PROPERTIES( _IECoreHoudini PROPERTIES SUFFIX ".pyd" )
ENDIF ()

TARGET_LINK_LIBRARIES( _IECoreHoudini ${THIS_LIBS} )

INSTALL( TARGETS _IECoreHoudini
         LIBRARY DESTINATION python/IECoreHoudini )

INSTALL( FILES ${PY_FILES}
         DESTINATION python/IECoreHoudini
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )
