FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../../include/IECoreHoudini/plugin/ "*.h" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     IECorePython
     IECoreHoudini
     ${CORTEX_HOUDINI_LIBS}
     ${Boost_LIBRARIES}
     ${CORTEX_ILMBASE_LIBS}
     ${CORTEX_OPENEXR_LIBS}
     ${CORTEX_TBB_LIBS}
     ${ZLIB_LIBRARIES} )

ADD_LIBRARY( IECoreHoudiniPlugin MODULE ${SOURCE_FILES} )

SET_TARGET_PROPERTIES( IECoreHoudiniPlugin PROPERTIES OUTPUT_NAME IECore )

IF ( WINDOWS )
    SET_TARGET_PROPERTIES( IECoreHoudiniPlugin PROPERTIES SUFFIX ".pyd" )
ENDIF ()

TARGET_LINK_LIBRARIES( IECoreHoudiniPlugin ${THIS_LIBS} )

INSTALL( TARGETS IECoreHoudiniPlugin
         LIBRARY DESTINATION plugins/houdini )
