FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../../include/IECoreMaya/bindings "../../../include/IECoreMaya/bindings/*.h" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

FILE( GLOB PY_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/../../../python/IECoreMaya/ "../../../python/IECoreMaya/*.py" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     IECorePython
     IECoreRI
     ${CORTEX_RI_LIBS}
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

ADD_LIBRARY( _IECoreMaya MODULE ${SOURCE_FILES} )

IF ( WINDOWS )
    SET_TARGET_PROPERTIES( _IECoreMaya PROPERTIES SUFFIX ".pyd" )
ELSE ()
  SET_TARGET_PROPERTIES( _IECoreMaya PROPERTIES PREFIX "" )
ENDIF ()

TARGET_LINK_LIBRARIES( _IECoreMaya ${THIS_LIBS} )

INSTALL( TARGETS _IECoreMaya
         LIBRARY DESTINATION python/IECoreMaya )

INSTALL( FILES ${PY_FILES}
         DESTINATION python/IECoreMaya
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )
