INCLUDE_DIRECTORIES( ${CORTEX_RMAN_INCLUDE_PATH} )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} )

SET( THIS_LIBS
     IECoreRI
     ${CORTEX_RMAN_LIBRMAN} )

ADD_LIBRARY( rmanDisplay MODULE ${SOURCE_FILES} )

SET_TARGET_PROPERTIES( rmanDisplay PROPERTIES OUTPUT_NAME ieDisplay )
SET_TARGET_PROPERTIES( rmanDisplay PROPERTIES PREFIX "" )

TARGET_LINK_LIBRARIES( rmanDisplay ${THIS_LIBS} )

INSTALL( TARGETS rmanDisplay
         LIBRARY DESTINATION renderMan/displayDrivers )
